css: Fix alignment of page-separator and show-more items in minimal mode

--- a/public/css/list/item-list.less
+++ b/public/css/list/item-list.less
@@ -93,6 +93,11 @@
     margin-right: .5em;
   }
 
+  &.show-more a,
+  &.page-separator a {
+    margin-left: 2.7em;
+  }
+
   .check-attempt {
     display: none;
   }
